[package]
name = "ckb-db"
version = "0.17.0-pre"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

[dependencies]
ckb-util = { path = "../util" }
ckb-protos = { path = "../protos" }
fnv = "1.0.3"
serde = "1.0"
serde_derive = "1.0"
failure = "0.1.5"
ckb-logger = { path = "../util/logger" }
semver = "0.9"
libc = "0.2"

[dev-dependencies]
tempfile = "3.0"

[dependencies.rocksdb]
git = "https://github.com/zhangsoledad/rust-rocksdb"
rev = "b0c4498"

default-features = false
